Fix resource description for dark mode

--- a/src/scss/_colors-apidesigner-dark.scss
+++ b/src/scss/_colors-apidesigner-dark.scss
@@ -80,6 +80,7 @@ $color-console-tab-trace-hover: #c7f107;
 $color-console-tab-text: #fff;
 
 // resource-panel view, colors when opened
+$color-resource-description-bg: #1C1E22;
 $color-resource-a: #217ec5;
 $color-resource-bg: $color-smoke;
 $color-resource-border: $color-smoke-light;
