--- a/src/scss/_colors-original.scss
+++ b/src/scss/_colors-original.scss
@@ -71,6 +71,7 @@ $color-console-tab-active-bg: #fff;
 $color-console-tab-active: #333;
 
 // resource-panel view, colors when opened
+$color-resource-description-bg: #FAFAFA;
 $color-resource-a: rgb(37, 125, 207);
 $color-resource-bg: #fff;
 $color-resource-border: #ccc;
