--- a/src/scss/_resource.scss
+++ b/src/scss/_resource.scss
@@ -25,7 +25,7 @@ ol.resources-container {
 
   div {
     padding: 17px;
-    background: #FAFAFA;
+    background: $color-resource-description-bg;
 
     h3 {
       font-size: 12px;
